Changing the modules to build to Default